include $(top_srcdir)/config/config

AM_CPPFLAGS		= \
			  -I. \
			  -I$(top_srcdir)/libWlz \
			  -I$(top_srcdir)/libAlg \
			  -I$(top_srcdir)/libAlc \
             		  $(all_includes)

lib_LTLIBRARIES 	= libWlz.la

libWlz_la_LDFLAGS 	= -release @PACKAGE_VERSION@

libWlz_la_SOURCES 	= \
			  Wlz2DContains.c \
			  Wlz3DProjection.c \
			  Wlz3DSection.c \
			  Wlz3DSectionFromGeoModel.c \
			  Wlz3DSectionSegmentObject.c \
			  Wlz3DViewStructUtils.c \
			  Wlz3DViewTransformObj.c \
			  Wlz3DWarpMQ_S.c \
			  WlzAffineTransform.c \
			  WlzAffineTransformLSq.c \
			  WlzArea.c \
			  WlzArray.c \
			  WlzAssign.c \
			  WlzAutoCor.c \
			  WlzBackground.c \
			  WlzBasisFn.c \
			  WlzBasisFnTransform.c \
			  WlzBoundaryUtils.c \
			  WlzBoundingBox.c \
			  WlzBoundToObj.c \
			  WlzCannyDeriche.c \
			  WlzCbThreshold.c \
			  WlzCCor.c \
			  WlzCentreOfMass.c \
			  WlzClipObjToBox.c \
			  WlzCMeshTransform.c \
			  WlzCMeshUtils.c \
			  WlzCompThresh.c \
			  WlzConstruct3D.c \
			  WlzContour.c \
			  WlzConvertPix.c \
			  WlzConvexHull.c \
			  WlzConvolve.c \
			  WlzCopy.c \
			  WlzCutObjToBox.c \
			  WlzDebug.c \
			  WlzDiffDomain3d.c \
			  WlzDiffDomain.c \
			  WlzDilation.c \
			  WlzDistMetric.c \
			  WlzDistTransform.c \
			  WlzDomainFill.c \
			  WlzDomainUtils.c \
			  WlzEmpty.c \
			  WlzErosion4.c \
			  WlzErosion.c \
			  WlzError.c \
			  WlzExplode3D.c \
			  WlzFacts.c \
			  WlzFillBlankPlanes.c \
			  WlzFilterNObjValues.c \
			  WlzFreeSpace.c \
			  WlzGauss.c \
			  WlzGaussNoise.c \
			  WlzGeometry.c \
			  WlzGeometryTrackUpAndDown_s.c \
			  WlzGeoModel.c \
			  WlzGeoModelFilters.c \
			  WlzGeoModelStats.c \
			  WlzGreyCrossing.c \
			  WlzGreyDitherObj.c \
			  WlzGreyGradient.c \
			  WlzGreyInvertMinMax.c \
			  WlzGreyMask.c \
			  WlzGreyModGradient.c \
			  WlzGreyNormalise.c \
			  WlzGreyRange.c \
			  WlzGreyScan.c \
			  WlzGreySetRange.c \
			  WlzGreySetRangeLut.c \
			  WlzGreySetValue.c \
			  WlzGreyStats.c \
			  WlzGreyTemplate.c \
			  WlzGreyTransfer.c \
			  WlzGreyValue.c \
			  WlzGreyValueMixing_s.c \
			  WlzHasIntersect.c \
			  WlzHistogram.c \
			  WlzHyThreshold.c \
			  WlzImageArithmetic.c \
			  WlzInsideDomain.c \
			  WlzIntersect2.c \
			  WlzIntersect3d.c \
			  WlzIntersectN.c \
			  WlzIntervalCount.c \
			  WlzIntervalDomScan.c \
			  WlzIntRescaleObj.c \
			  WlzLabel3d.c \
			  WlzLabel.c \
			  WlzLaplacian.c \
			  WlzLBTDomain.c \
			  WlzLineArea.c \
			  WlzMakeAffineTransform.c \
			  WlzMakeCompound.c \
			  WlzMakeIntervalValues.c \
			  WlzMakeProperties.c \
			  WlzMakeStructs.c \
			  WlzMatchICP.c \
			  WlzMeshGen.c \
			  WlzMeshTransform.c \
			  WlzMeshUtils.c \
			  WlzMwrAngle.c \
			  WlzNMSuppress.c \
			  WlzObjToBoundary.c \
			  WlzPoints.c \
			  WlzPolarSample.c \
			  WlzPolyDecimate.c \
			  WlzPolyEquispace.c \
			  WlzPolyReverse.c \
			  WlzPolySmooth.c \
			  WlzPolyToObj.c \
			  WlzPolyUtils.c \
			  WlzPrinicipalAngle.c \
			  WlzRank.c \
			  WlzRaster.c \
			  WlzReadObj.c \
			  WlzRegCCor.c \
			  WlzRegICP.c \
			  WlzRGBAConvert.c \
			  WlzRGBAGreyStats.c \
			  WlzRGBAImageArithmetic.c \
			  WlzRGBAModGradient.c \
			  WlzRGBAPixelUtils.c \
			  WlzRGBARange.c \
			  WlzRGBAThreshold.c \
			  WlzRsvFilter.c \
			  WlzSampleObj.c \
			  WlzSampleValuesAndCoords.c \
			  WlzScalarArithmeticOp.c \
			  WlzScalarBinaryOp.c \
			  WlzScalarFeatures.c \
			  WlzScalarFn.c \
			  WlzSepTrans.c \
			  WlzSeqPar.c \
			  WlzShadeCorrect.c \
			  WlzShift.c \
			  WlzSkeleton.c \
			  WlzSnapFit.c \
			  WlzSobel.c \
			  WlzSplitObj.c \
			  WlzStdStructElements.c \
			  WlzStringTypes.c \
			  WlzStringUtils.c \
			  WlzStructDilation.c \
			  WlzStructErosion.c \
			  WlzThreshold.c \
			  WlzTransform.c \
			  WlzTransposeObj.c \
			  WlzUnion2.c \
			  WlzUnion3d.c \
			  WlzUnionN.c \
			  WlzValueTableUtils.c \
			  WlzValueUtils.c \
			  WlzVerifyObj.c \
			  WlzVerticies.c \
			  WlzVolume.c \
			  WlzWindow.c \
			  WlzWriteObj.c

include_HEADERS 	= \
			  Wlz.h \
			  WlzError.h \
			  WlzDebug.h \
			  WlzProto.h \
			  WlzMacro.h \
			  WlzType.h
